--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,6 +7,11 @@
   border-bottom: 1px solid @nav-border;
   line-height: 1.5;
 
+  position: fixed;
+	top: 0;
+  overflow: hidden;
+  background: @opacity;
+
   .logo {
     font-size: 4rem;
     .hStyle();
@@ -34,6 +39,7 @@
 }
 
 .home {
+  margin-top: 87px;
 
   .intro {
     #introImg {
