--- a/less/variables.less
+++ b/less/variables.less
@@ -22,7 +22,7 @@
 @waterloo: #81848E;
 @btn-bg-color: #22283A;
 @border-real: #dee2e6;
-@opacity: ~"rgba(255, 255, 255, 0.6)";
+@opacity: ~"rgba(246, 246, 246, .8)";
 
 // Mobile var
 @phone: ~"(max-width: 500px)";
